gatekeeper-policies/constraints/10-require-antiaffinity-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireAntiAffinity
metadata:
  name: require-pod-antiaffinity
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
