gatekeeper-policies/constraints/11-secret-base64-secret.yaml
cat <<EOF | kubectl apply -f -
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sSecretBase64Encoded
metadata:
  name: secret-must-be-base64
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Secret"]
EOF
