gatekeeper-policies/constraints/2-require-probes-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireProbes
metadata:
  name: require-readiness-probes
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
