gatekeeper-policies/constraints/6-require-pdb-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequirePDB
metadata:
  name: require-pdb
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
