gatekeeper-policies/constraints/9-restrict-volumes-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictVolumes
metadata:
  name: no-hostpath-volumes
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
